# CMD-GENIE

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  notes.md  run.sh
backend/: pyproject.toml
backend/app/: gemma.py  main.py
backend/tests/: test_app.py
data.example/: commands.md  notes.md  quick-access.md
frontend/: index.html
